fix auction spacing

--- a/js/packages/web/src/views/auction/index.less
+++ b/js/packages/web/src/views/auction/index.less
@@ -6,6 +6,7 @@
     font-size: 2.8rem;
   }
 
+  line-height: 1em;
   letter-spacing: -0.02em;
   color: #FFFFFF;
 }
